refactor and fixing tests
