# claims-api-reference/open-api-specification.yml
@@ -196,6 +196,51 @@ paths:
         '500':
           description: 'Internal server error'
 
+    get:
+      operationId: getSubmissions
+      x-spring-paginated: true
+      tags:
+        - Submissions
+      summary: get claim submissions
+      description: Return claim submissions by office account numbers (mandatory), submissionId, submittedDateFrom, submittedDateTo
+      parameters:
+        - name: offices
+          in: query
+          required: true
+          schema:
+            type: array
+            items:
+              type: string
+            description: Filter by list of office account numbers
+        - name: submissionId
+          in: query
+          required: false
+          schema:
+            type: string
+          description: Filter by submission ID
+        - name: submittedDateFrom
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date
+          description: Filter submissions submitted from this date (inclusive)
+        - name: submittedDateTo
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date
+          description: Filter submissions submitted up to this date (inclusive)
+
+      responses:
+        '200':
+          description: returns a list of paginated claim submissions
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SubmissionsResultSet'
+
   /api/v0/submissions/{id}/claims:
     post:
       operationId: createClaim
@@ -266,7 +311,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/MatterStartsPost'
+              $ref: '#/components/schemas/MatterStartPost'
       responses:
         '201':
           description: Matter Start created successfully
@@ -292,7 +337,7 @@ paths:
           description: 'Forbidden'
         '500':
           description: 'Internal server error'
-  /api/v0/submissions/{id}/matter-starts/{matter-starts-id}:
+  /api/v0/submissions/{id}/matter-starts/{matter-start-id}:
     get:
       operationId: getMatterStart
       tags:
@@ -308,10 +353,10 @@ paths:
           schema:
             type: string
             format: uuid
-        - name: matter-starts-id
+        - name: matter-start-id
           in: path
           required: true
-          description: UUID of the matter starts
+          description: UUID of the matter start
           schema:
             type: string
             format: uuid
@@ -321,7 +366,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/MatterStartsGet'
+                $ref: '#/components/schemas/MatterStartGet'
         '400':
           description: 'Bad request'
         '401':
@@ -355,7 +400,7 @@ paths:
       responses:
         '204':
           description: 'Submission status updated successfully'
-          content: { }
+          content: {}
         '400':
           description: 'Bad request'
         '401':
@@ -389,9 +434,9 @@ paths:
               schema:
                 type: object
                 description: submission details
+                allOf:
+                  - $ref: '#/components/schemas/SubmissionFields'
                 properties:
-                  submission:
-                    $ref: '#/components/schemas/SubmissionFields'
                   claims:
                     type: array
                     description: List of claims (ID + status) for this submission
@@ -495,46 +540,11 @@ paths:
       responses:
         '204':
           description: Claim updated successfully
-          content: { }
+          content: {}
         '400':
           description: Invalid request
         '404':
           description: Submission or claim not found
-  /api/v0/validation-errors:
-    get:
-      operationId: getValidationErrors
-      tags:
-        - Validation
-      summary: Gets all validation errors for a submission
-      description: Returns all the validation errors for the specified submission ID.
-      parameters:
-        - name: submission-id
-          in: query
-          required: true
-          schema:
-            type: string
-            format: uuid
-          description: UUID of the submission
-      responses:
-        '200':
-          description: Submission found
-          content:
-            application/json:
-              schema:
-                type: array
-                description: List of validation errors for this submission
-                items:
-                  $ref: '#/components/schemas/ClaimValidationError'
-        '400':
-          description: 'Bad request'
-        '401':
-          description: 'Unauthorized'
-        '403':
-          description: 'Forbidden'
-        '404':
-          description: 'Submission ID not found'
-        '500':
-          description: 'Internal server error'
 components:
   schemas:
     BulkSubmissionStatus:
@@ -606,6 +616,15 @@ components:
         submitted:
           type: date
           description: Date the submission was submitted
+    SubmissionsResultSet:
+      allOf:
+        - $ref: "#/components/schemas/page"
+      type: 'object'
+      properties:
+        content:
+          type: 'array'
+          items:
+            $ref: '#/components/schemas/SubmissionFields'
 
     ClaimPost:
       allOf:
@@ -1092,15 +1111,15 @@ components:
         medConcludedDate:
           type: string
           format: date
-    MatterStartsPost:
+    MatterStartPost:
       allOf:
-        - $ref: '#/components/schemas/MatterStartsFields'
-    MatterStartsGet:
+        - $ref: '#/components/schemas/MatterStartFields'
+    MatterStartGet:
       allOf:
-        - $ref: '#/components/schemas/MatterStartsFields'
-    MatterStartsFields:
+        - $ref: '#/components/schemas/MatterStartFields'
+    MatterStartFields:
       type: object
-      description: Matter starts for a submission
+      description: Matter start for a submission
       properties:
         schedule_reference:
           type: string
@@ -1112,15 +1131,14 @@ components:
           type: string
         delivery_location:
           type: string
-    ClaimValidationError:
-      type: object
-      description: Validation error for a claim
+    page:
+      type: 'object'
       properties:
-        unique_client_number:
-          type: string
-        unique_file_number:
-          type: string
-        client:
-          type: string
-        error_description:
-          type: string
+        total_pages:
+          type: 'integer'
+        total_elements:
+          type: 'integer'
+        number:
+          type: 'integer'
+        size:
+          type: 'integer'
