# laa-submit-a-bulk-claim-ui/src/main/java/uk/gov/justice/laa/bulkclaim/controller/BulkImportInProgressController.java
@@ -11,7 +11,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.util.Assert;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.SessionAttributes;
@@ -62,19 +61,14 @@ public class BulkImportInProgressController {
       throw new SubmitBulkClaimException("Claims API returned an error", e);
     }
 
-    // Check submission. If the response from data claims API is 200, these fields
-    //  should be not null.
-    Assert.notNull(submission, "Submission is null");
-    Assert.notNull(submission.getSubmission(), "Submission fields is null");
-
     // Check for NIL submission
-    if (Boolean.TRUE.equals(submission.getSubmission().getIsNilSubmission())) {
+    if (Boolean.TRUE.equals(submission.getIsNilSubmission())) {
       log.info("NIL submission found, will redirect: %s".formatted(bulkSubmissionId.toString()));
       return "redirect:/view-submission-summary";
     }
 
     // Redirect if submission is complete
-    if (completedStatuses.contains(submission.getSubmission().getStatus())) {
+    if (completedStatuses.contains(submission.getStatus())) {
       return "redirect:/view-submission-summary";
     }
     model.addAttribute("shouldRefresh", true);
